Fix cannot start elasticsearch

--- a/elasticsearch/5.2/Dockerfile
+++ b/elasticsearch/5.2/Dockerfile
@@ -1,6 +1,6 @@
-FROM docker.elastic.co/elasticsearch/elasticsearch:5.2.2
+FROM elasticsearch:5.2.2
 
-RUN echo "xpack.security.enabled: false" >> /usr/share/elasticsearch/config/elasticsearch.yml
+#RUN echo "xpack.security.enabled: false" >> /usr/share/elasticsearch/config/elasticsearch.yml
 
 RUN bin/elasticsearch-plugin install analysis-phonetic
 
@@ -9,5 +9,9 @@ RUN bin/elasticsearch-plugin install analysis-icu
 RUN bin/elasticsearch-plugin install analysis-smartcn
 
 RUN bin/elasticsearch-plugin install analysis-stempel
+
+RUN chown -R elasticsearch:elasticsearch /usr/share/elasticsearch
+
+USER elasticsearch
 
 EXPOSE 9200 9300
