--- a/images/php/7.3-fpm/etc/php-fpm.conf
+++ b/images/php/7.3-fpm/etc/php-fpm.conf
@@ -11,7 +11,7 @@ access.log = /proc/self/fd/2
 listen = [::]:9000
 
 pm = dynamic
-pm.max_children = 10
+pm.max_children = !FPM_MAX_CHILDREN!; # Variable: FPM_MAX_CHILDREN
 pm.start_servers = 4
 pm.min_spare_servers = 2
 pm.max_spare_servers = 6
