Enable slow log fpm

--- a/images/php/7.3-fpm/etc/php-fpm.conf
+++ b/images/php/7.3-fpm/etc/php-fpm.conf
@@ -23,3 +23,7 @@ clear_env = no
 
 ; Ensure worker stdout and stderr are sent to the main error log.
 catch_workers_output = yes
+
+slowlog = /app/var/log/fpm-slow.log
+
+request_slowlog_timeout = 10s
