--- a/images/php/7.3-fpm/etc/php-fpm.conf
+++ b/images/php/7.3-fpm/etc/php-fpm.conf
@@ -24,6 +24,6 @@ clear_env = no
 ; Ensure worker stdout and stderr are sent to the main error log.
 catch_workers_output = yes
 
-slowlog = /app/var/log/fpm-slow.log
+; slowlog = /app/var/log/fpm-slow.log
 
-request_slowlog_timeout = 10s
+; request_slowlog_timeout = 10s
